Fix menu overflow hidden issue

--- a/responsive.css
+++ b/responsive.css
@@ -34,7 +34,7 @@
 	
 	/* layout */
 	#wrapper-outer { padding: 0 10px; }
-	#wrapper { margin-top: 10px; padding-left: 0; }
+	#wrapper { overflow: hidden; margin-top: 10px; padding-left: 0; }
 	.main-inner { display: block; }
 	.sidebar .widget { margin-top: 0; border-width: 1px 0 0 0; }
 	
@@ -63,6 +63,7 @@
 	/* header */
 	#header,
 	#header .pad { padding: 0; }
+	#header { border-radius: 20px 20px 0 0; }
 	.site-title { padding: 10px 0; margin: 0; width: 100%; float: none; line-height: 50px; border-bottom: 1px solid #eee; }
 	.site-title a { text-align: center; }
 	
